# SC-system-backend

./: .env.sample  .gitignore  Dockerfile  README.md  app_fastapi.py  client.py  create_database_sqmodel.py  database.db  docker-compose.yml  function_app.py  host.json  main.py  output.txt  pyproject.toml  requirements.txt  sc-test-db  test_endpoints.py
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-attach.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUES_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  fix_request.md
.github/workflows/: main_sc-system-backend(dev).yml  release_sc-system-test-function.yml  release_sc-test-api.yml
api/: api_db_conn.py  app_fastapi.py  demo_fastapi.py  logger.py
api/app/: dto.py  models.py  role.py
api/app/database/: database.py  engine.py
api/app/dtos/: auth_dtos.py  chatlog_dtos.py  errorlog_dtos.py  group_dtos.py  major_dtos.py  school_info_dtos.py  session_dtos.py  user_dtos.py  world_dtos.py
api/app/models/: user.py
api/app/routers/: __init__.py  auth.py  chats.py  error_log.py  group.py  major.py  messages.py  school_info.py  sessions.py  users.py  world.py
api/app/schemas/: message.py  schemas.py  token.py  user.py
api/app/security/: jwt_token.py  role.py
api/demo/: chats.py  client.py  error_log.py  models.py  sessions.py  users.py
api/demo/database/: database.py  engine.py
api/routers/: hello.py
secret/: .py  test_app_endpoints.py  test_streaming.py
test/: .py  tag_memo.py  test_app_endpoints.py  test_streaming.py
tests/: test_app_endpoints.py  test_demo_endpoints.py
(+10 files in other folders)
